@@ -1,5 +1,15 @@
 2013-01-28  Sam Weinig  <sam@webkit.org>
 
+        Remove support from ArgumentEncoder for deprecated encode functions
+        https://bugs.webkit.org/show_bug.cgi?id=108155
+
+        Reviewed by Dan Bernstein.
+
+        * Platform/CoreIPC/ArgumentEncoder.h:
+        (CoreIPC::ArgumentEncoder::encode):
+
+2013-01-28  Sam Weinig  <sam@webkit.org>
+
         Disable default use of the Plug-in XPCService until we can
         figure out how to deal with the 32-bit one.
 
